added lots of actions and updates

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
     <script src="lib/jquery.nicescroll.min.js"></script>
     <script src="lib/jquery.scrollTo.min.js"></script>
     <script src="lib/jquery.lazyload.min.js"></script>
+    <script src="lib/jquery.backstretch.min.js"></script>
     <script src="lib/jquery.jsonrpc.js"></script>
     <script src="lib/jquery-ui/js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="lib/jquery.resizecrop-1.0.3.min.js"></script>
 
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
