--- a/tpl/PlaylistItemView.html
+++ b/tpl/PlaylistItemView.html
@@ -1,4 +1,8 @@
 <div class="playlist-item song" data-id="<%= pos %>" data-songid="<%= id %>">
+    <div class="actions">
+        <span class="icon-ellipsis-vertical menubtn"></span>
+        <span class="icon-remove removebtn"></span>
+    </div>
     <a href="#album/<%= albumid %>"><img src="/theme/images/default.png" class="thumb" /></a>
     <span class="playlist-play"><%= label %></span>
     <span class="playlist-meta"></span>
