--- a/tpl/AlbumItemView.html
+++ b/tpl/AlbumItemView.html
@@ -9,7 +9,16 @@
             <% } %>
         </a>
     </div>
-    <p class="album-title"><a class="" href='#album/<%= albumid %>'><%= album %></a></p>
+
+    <div class="album-title"><a class="" href='#album/<%= albumid %>'><%= album %></a>
+    <div class="album-actions-wrapper">
+        <div class="album-actions dropdown" data-id="<%= albumid %>">
+            <button class="album-play btn" title="Replace the playlist with this album and start playing"><i class="icon-play"></i></button>
+            <button class="album-add btn" title="Add all songs from this album to the playlist"><i class="icon-plus"></i></button>
+            <button class="album-menu btn" title="More Options"><i class="icon-ellipsis-vertical"></i></button>
+        </div>
+    </div>
+    </div>
     <div class="tracks">
         Tracks
     </div>
