--- a/tpl/ArtistView.html
+++ b/tpl/ArtistView.html
@@ -7,6 +7,13 @@
     <% } %>
 
     <div id="artist-tabs">
+        <div class="artist-actions-wrapper">
+            <div class="artist-actions dropdown" data-id="<%= artistid %>">
+                <button class="artist-play btn" title="Replace the playlist with this artist and start playing"><i class="icon-play"></i></button>
+                <button class="artist-add btn" title="Add all songs from this artist to the playlist"><i class="icon-plus"></i></button>
+                <button class="artist-menu btn"><i class="icon-ellipsis-vertical"></i></button>
+            </div>
+        </div>
         <ul class="nav nav-tabs">
             <li class="active"><a href="#album-list" data-toggle="tab">Music</a></li>
             <li data-id="about"><a href="#artist-meta" data-toggle="tab">About</a></li>
