--- a/tpl/HomeView.html
+++ b/tpl/HomeView.html
@@ -1,1 +1,10 @@
-<div class="loading-box">Welcome to Chorus......</div>
+<div id="home">
+
+    <div id="playing" class="playing">
+
+        <h2 class="playing-song-title"><%= title %></h2>
+        <h3 class="playing-song-meta"><%= artist[0] %></h3>
+    </div>
+
+</div>
+
