loads of playlist refinements

--- a/tpl/AlbumItemView.html
+++ b/tpl/AlbumItemView.html
@@ -10,7 +10,7 @@
         </a>
     </div>
 
-    <div class="album-title"><a class="" href='#album/<%= albumid %>'><%= album %></a>
+    <div class="album-title"><a class="album-title-link" href='#album/<%= albumid %>'><%= album %></a>
     <div class="album-actions-wrapper">
         <div class="album-actions dropdown" data-id="<%= albumid %>">
             <button class="album-play btn" title="Replace the playlist with this album and start playing"><i class="icon-play"></i></button>
