--- a/tpl/ShellView.html
+++ b/tpl/ShellView.html
@@ -15,7 +15,8 @@
             <h1 id="title">Loading Library</h1>
         </div>
         <div id="search-box">
-            <input id="search" placeholder="search" />
+            <i id="search-this" class="icon-search"></i>
+            <input id="search" />
         </div>
     </header>
     <div id="content-wrapper">
@@ -46,7 +47,7 @@
     <div class="footer-inner">
         <div class="footer-left actions-primary">
             <span class="player-prev player-button"><i class="icon-backward"></i></span>
-            <span class="player-play player-button"><i class="icon-play"></i></span>
+            <span class="player-play player-button"><i class="icon-play"></i><i class="icon-pause"></i></span>
             <span class="player-next player-button"><i class="icon-forward"></i></span>
         </div>
         <div class="footer-right">
@@ -75,7 +76,7 @@
                 <div id="progress-bar"></div>
             </div>
             <div id="time">
-                <div class="time-cur">0:00</div>
+                <div class="time-cur">0</div>
                 <div class="time-total">0:00</div>
             </div>
         </div>
