--- a/tpl/PlaylistItemView.html
+++ b/tpl/PlaylistItemView.html
@@ -1,4 +1,5 @@
 <div class="playlist-item song" data-id="<%= pos %>" data-songid="<%= id %>">
+    <i class="repeating icon-repeat" title="this song is on an endless repeat, click to stop repeating"></i>
     <div class="actions">
         <span class="icon-play playbtn"></span>
         <span class="icon-remove removebtn"></span>
