--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
       <div class="loading-box">Loading Application</div>
   </div>
 
-    <!-- Load JS here for greater good =============================-->
+    <!-- So much js... =============================-->
+
+    <!-- Libs / Depends -->
     <script src="lib/jquery-1.9.1.min.js"></script>
     <script src="lib/underscore-min.js"></script>
     <script src="lib/backbone.dev.js"></script>
     <script src="lib/backbone.rpc.min.js"></script>
     <script src="lib/flatui/js/bootstrap.min.js"></script>
-    <script src="lib/jquery.isotope.min.js"></script>
+    <script src="lib/salvattore.min.js"></script>
     <script src="lib/jquery.mousewheel.js"></script>
     <script src="lib/jquery.nicescroll.min.js"></script>
     <script src="lib/jquery.scrollTo.min.js"></script>
@@ -48,36 +50,41 @@
     <script src="lib/jquery.backstretch.min.js"></script>
     <script src="lib/jquery.jsonrpc.js"></script>
     <script src="lib/jquery-ui/js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="lib/jquery.resizecrop-1.0.3.min.js"></script>
+    <script src="lib/jquery.total-storage.min.js"></script>
 
+    <!-- Core -->
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
 
-
+    <!-- Views -->
     <script src="js/views/shell.js"></script>
     <script src="js/views/home.js"></script>
     <script src="js/views/contact.js"></script>
 
     <script src="js/views/artistdetails.js"></script>
-
     <script src="js/views/artists.js"></script>
     <script src="js/views/artistslist.js"></script>
+    <script src="js/views/albumdetails.js"></script>
+    <script src="js/views/albums.js"></script>
+    <script src="js/views/songs.js"></script>
+    <script src="js/views/playlist.js"></script>
+    <script src="js/views/customPlaylist.js"></script>
+    <script src="js/views/files.js"></script>
 
-   <script src="js/views/albumdetails.js"></script>
-   <script src="js/views/albums.js"></script>
-   <script src="js/views/songs.js"></script>
-   <script src="js/views/playlist.js"></script>
-<!--
+    <!-- Controllers -->
+    <script src="js/controllers/xbmc.js"></script>
+    <script src="js/controllers/audio.js"></script>
+    <script src="js/controllers/storage.js"></script>
+    <script src="js/controllers/playlists.js"></script>
 
-    <script src="js/models/model-xbmc.js"></script>
--->
-  <script src="js/controllers/xbmc.js"></script>
-  <script src="js/controllers/audio.js"></script>
+    <!-- Models -->
+    <script src="js/models/audio.js"></script>
+    <script src="js/models/file.js"></script>
 
-  <script src="js/models/audio.js"></script>
+    <!-- Collections -->
     <script src="js/collections/xbmc.js"></script>
     <script src="js/collections/audio.js"></script>
-
+    <script src="js/collections/files.js"></script>
 
   </body>
 </html>
