--- a/tpl/ArtistView.html
+++ b/tpl/ArtistView.html
@@ -8,7 +8,8 @@
 
     <div id="artist-tabs">
         <div class="artist-actions-wrapper">
-            <div class="artist-actions dropdown" data-id="<%= artistid %>">
+            <div class="artist-actions dropdown<%= (thumbsup ? ' thumbs-up' : '') %>" data-id="<%= artistid %>">
+                <button class="artist-thumbsup btn" title="Thumbs Up"><i class="icon-thumbs-up"></i></button>
                 <button class="artist-play btn" title="Replace the playlist with this artist and start playing"><i class="icon-play"></i></button>
                 <button class="artist-add btn" title="Add all songs from this artist to the playlist"><i class="icon-plus"></i></button>
                 <button class="artist-menu btn"><i class="icon-ellipsis-vertical"></i></button>
