--- a/tpl/CustomPlaylistSongView.html
+++ b/tpl/CustomPlaylistSongView.html
@@ -1,6 +1,5 @@
-<div class="track song" data-type="song" data-id="<%= songid %>" data-songid="<%= songid %>" data-path="<%= file %>">
-
-    <span class="track-col song-tracknum"><%= (parseInt(track) > 0 ? track : "") %></span>
+<div class="track song playlist-item" data-type="song" data-pos="<%= position %>" data-id="<%= songid %>" data-songid="<%= songid %>" data-path="<%= file %>">
+    <span class="track-col song-tracknum song-thumb"><a href="#album/<%= albumid %>"><img src="<%= app.parseImage( thumbnail ) %>" class="thumb" /></a></span>
     <span class="track-col song-title"><%= label %></span>
     <span class="track-col song-artist"><a href="#artist/<%= artistid %> " class=""><%= artist %></a></span>
     <span class="track-col song-duration"><%= app.helpers.secToTime(duration) %></span>
