loads more refactoring, close to alpha ready

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     <script src="js/views/playlist.js"></script>
     <script src="js/views/customPlaylist.js"></script>
     <script src="js/views/files.js"></script>
+    <script src="js/views/playerState.js"></script>
+    <script src="js/views/search.js"></script>
+
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
