- Changed context options for album to be over artwork - Clear playlist before adding a song if nothing is playing - Local dump dev page - removed context menus not in use - fixed bug with thumbs up songs not showing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- So much js... =============================-->
 
     <!-- Libs / Depends -->
-    <script src="lib/required/jquery-1.9.1.min.js"></script>
+    <script src="lib/required/jquery-1.10.2.js"></script>
     <script src="lib/required/underscore-min.js"></script>
     <script src="lib/required/backbone.dev.js"></script>
     <script src="lib/required/backbone.rpc.min.js"></script>
@@ -45,6 +45,7 @@
     <script src="lib/enabled/jquery.jsonrpc.js"></script>
     <script src="lib/enabled/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="lib/enabled/jquery.total-storage.min.js"></script>
+    <script src="lib/enabled/chosen.jquery.min.js"></script>
 
     <!-- Core -->
     <script src="js/utils.js"></script>
@@ -66,13 +67,14 @@
     <script src="js/views/files.js"></script>
     <script src="js/views/playerState.js"></script>
     <script src="js/views/search.js"></script>
-
+    <script src="js/views/xbmc.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
     <script src="js/controllers/audio.js"></script>
     <script src="js/controllers/storage.js"></script>
     <script src="js/controllers/playlists.js"></script>
+    <script src="js/controllers/addons.js"></script>
 
     <!-- Models -->
     <script src="js/models/audio.js"></script>
