cleaned up albums and artists views, added frewall, album actions

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="lib/enabled/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="lib/enabled/jquery.total-storage.min.js"></script>
     <script src="lib/enabled/chosen.jquery.min.js"></script>
+    <script src="lib/enabled/freewall.js"></script>
 
     <!-- Core -->
     <script src="js/utils.js"></script>
