Browser streaming functionality and ui

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
+
+      <!-- Sound Manager (streaming audio) -->
+      <script src="dist/lib/soundmanager/script/soundmanager2.js"></script>
+
   </head>
   <body>
 
@@ -47,6 +51,7 @@
     <script src="lib/enabled/jquery.total-storage.min.js"></script>
     <script src="lib/enabled/chosen.jquery.min.js"></script>
     <script src="lib/enabled/freewall.js"></script>
+    <script src="lib/enabled/swfobject.js"></script>
 
     <!-- Core -->
     <script src="js/utils.js"></script>
@@ -76,6 +81,7 @@
     <script src="js/controllers/storage.js"></script>
     <script src="js/controllers/playlists.js"></script>
     <script src="js/controllers/addons.js"></script>
+    <script src="js/controllers/audioStreaming.js"></script>
 
     <!-- Models -->
     <script src="js/models/audio.js"></script>
@@ -85,6 +91,7 @@
     <script src="js/collections/xbmc.js"></script>
     <script src="js/collections/audio.js"></script>
     <script src="js/collections/files.js"></script>
+
 
   </body>
 </html>
