--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="dist/favicon.png">
+
     <!-- Loading Bootstrap -->
     <link href="dist/lib/flatui/bootstrap/css/bootstrap.css" rel="stylesheet">
 
