--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 
       <!-- Sound Manager (streaming audio) -->
-      <script src="dist/lib/soundmanager/script/soundmanager2.js"></script>
+      <!--<script src="dist/lib/soundmanager/script/soundmanager2.js"></script>-->
+      <script src="dist/lib/soundmanager/script/soundmanager2-nodebug-jsmin.js"></script>
 
   </head>
   <body>
