browser streaming experimental, refactored lots of js and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="dist/favicon.png">
+    <!-- FavIco -->
+    <link rel="shortcut icon" href="dist/favicon.png" type="image/png">
 
     <!-- Loading Bootstrap -->
     <link href="dist/lib/flatui/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -21,14 +22,7 @@
     <link href="dist/theme/css/font-awesome/font-awesome.css" rel="stylesheet">
 
     <!-- Loading Chorus css -->
-    <link href="dist/theme/css/page.css" rel="stylesheet">
-
-    <link rel="shortcut icon" href="images/favicon.ico">
-
-
-      <!-- Sound Manager (streaming audio) -->
-      <!--<script src="dist/lib/soundmanager/script/soundmanager2.js"></script>-->
-      <script src="dist/lib/soundmanager/script/soundmanager2-nodebug-jsmin.js"></script>
+    <link href="dist/theme/css/styles.css" rel="stylesheet">
 
   </head>
   <body>
@@ -95,6 +89,10 @@
     <script src="js/collections/audio.js"></script>
     <script src="js/collections/files.js"></script>
 
+
+  <!-- Sound Manager (streaming audio) -->
+  <!--<script src="dist/lib/soundmanager/script/soundmanager2.js"></script>-->
+  <script src="dist/lib/soundmanager/script/soundmanager2-nodebug-jsmin.js"></script>
 
   </body>
 </html>
