--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <script src="lib/enabled/chosen.jquery.min.js"></script>
     <script src="lib/enabled/freewall.js"></script>
     <script src="lib/enabled/swfobject.js"></script>
+    <script src="lib/enabled/jquery.bum-smack-1.2.0.min.js"></script>
+    <script src="lib/enabled/jquery.once.min.js"></script>
 
     <!-- Core -->
     <script src="js/utils.js"></script>
@@ -71,6 +73,7 @@
     <script src="js/views/playerState.js"></script>
     <script src="js/views/search.js"></script>
     <script src="js/views/xbmc.js"></script>
+    <script src="js/views/movies.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
@@ -79,15 +82,18 @@
     <script src="js/controllers/playlists.js"></script>
     <script src="js/controllers/addons.js"></script>
     <script src="js/controllers/audioStreaming.js"></script>
+    <script src="js/controllers/video.js"></script>
 
     <!-- Models -->
     <script src="js/models/audio.js"></script>
     <script src="js/models/file.js"></script>
+    <script src="js/models/video.js"></script>
 
     <!-- Collections -->
     <script src="js/collections/xbmc.js"></script>
     <script src="js/collections/audio.js"></script>
     <script src="js/collections/files.js"></script>
+    <script src="js/collections/video.js"></script>
 
 
   <!-- Sound Manager (streaming audio) -->
