Movie search, Search refactor, Video streaming

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Chorus.</title>
-      
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- FavIco -->
@@ -20,6 +20,9 @@
 
     <!-- Loading icons css -->
     <link href="dist/theme/css/font-awesome/font-awesome.css" rel="stylesheet">
+
+      <link href="http://vjs.zencdn.net/4.4/video-js.css" rel="stylesheet">
+      <script src="http://vjs.zencdn.net/4.4/video.js"></script>
 
     <!-- Loading Chorus css -->
     <link href="dist/theme/css/styles.css" rel="stylesheet">
@@ -56,11 +59,13 @@
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
 
+    <!-- Helpers -->
+    <script src="js/helpers/pager.js"></script>
+
     <!-- Views -->
     <script src="js/views/shell.js"></script>
     <script src="js/views/home.js"></script>
     <script src="js/views/contact.js"></script>
-
     <script src="js/views/artistdetails.js"></script>
     <script src="js/views/artists.js"></script>
     <script src="js/views/artistslist.js"></script>
