--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,6 @@
     <!-- Loading icons css -->
     <link href="dist/theme/css/font-awesome/font-awesome.css" rel="stylesheet">
 
-      <link href="http://vjs.zencdn.net/4.4/video-js.css" rel="stylesheet">
-      <script src="http://vjs.zencdn.net/4.4/video.js"></script>
-
     <!-- Loading Chorus css -->
     <link href="dist/theme/css/styles.css" rel="stylesheet">
 
@@ -79,6 +76,7 @@
     <script src="js/views/search.js"></script>
     <script src="js/views/xbmc.js"></script>
     <script src="js/views/movies.js"></script>
+    <script src="js/views/tvshows.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
