app will now use websockets if available

--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,7 @@
     <script src="js/controllers/addons.js"></script>
     <script src="js/controllers/audioStreaming.js"></script>
     <script src="js/controllers/video.js"></script>
+    <script src="js/controllers/notifications.js"></script>
 
     <!-- Models -->
     <script src="js/models/audio.js"></script>
