--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
     <script src="js/views/xbmc.js"></script>
     <script src="js/views/movies.js"></script>
     <script src="js/views/tvshows.js"></script>
+    <script src="js/views/remote.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
