made search responsive

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
     <script src="js/views/movies.js"></script>
     <script src="js/views/tvshows.js"></script>
     <script src="js/views/remote.js"></script>
+    <script src="js/views/mixed.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
@@ -100,6 +101,8 @@
     <script src="js/collections/files.js"></script>
     <script src="js/collections/video.js"></script>
 
+  <!-- Addons -->
+  <script src="js/addons/plugin.audio.soundcloud.js"></script>
 
   <!-- Sound Manager (streaming audio) -->
   <!--<script src="dist/lib/soundmanager/script/soundmanager2.js"></script>-->
