--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,7 @@
     <script src="js/views/tvshows.js"></script>
     <script src="js/views/remote.js"></script>
     <script src="js/views/mixed.js"></script>
+    <script src="js/views/thumbsup.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
