--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
     <!-- Loading Chorus css -->
     <link href="dist/theme/css/styles.css" rel="stylesheet">
 
+      <!-- Sound Manager (streaming audio) -->
+      <!--<script src="dist/lib/soundmanager/script/soundmanager2.js"></script>-->
+      <!--<script src="../dist/lib/soundmanager/script/soundmanager2-nodebug-jsmin.js"></script>-->
+
   </head>
   <body>
 
@@ -58,6 +62,8 @@
 
     <!-- Helpers -->
     <script src="js/helpers/pager.js"></script>
+    <script src="js/helpers/settings.js"></script>
+    <script src="js/helpers/filters.js"></script>
 
     <!-- Views -->
     <script src="js/views/shell.js"></script>
@@ -105,9 +111,6 @@
   <!-- Addons -->
   <script src="js/addons/plugin.audio.soundcloud.js"></script>
 
-  <!-- Sound Manager (streaming audio) -->
-  <!--<script src="dist/lib/soundmanager/script/soundmanager2.js"></script>-->
-  <script src="../dist/lib/soundmanager/script/soundmanager2-nodebug-jsmin.js"></script>
 
 
   <!-- Browser Sync (DEV ONLY! Change to match your IP:PORT when running npm test) -->
