tv and movie watched toggle, ui updates

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
       <!-- Sound Manager (streaming audio) -->
       <!--<script src="dist/lib/soundmanager/script/soundmanager2.js"></script>-->
-      <!--<script src="../dist/lib/soundmanager/script/soundmanager2-nodebug-jsmin.js"></script>-->
+      <script src="dist/lib/soundmanager/script/soundmanager2-nodebug-jsmin.js"></script>
 
   </head>
   <body>
