--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Chorus.</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- FavIco -->
     <link rel="shortcut icon" href="dist/favicon.png" type="image/png">
