music section, sidebar menu, tags View, styles

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
     <script src="js/helpers/pager.js"></script>
     <script src="js/helpers/settings.js"></script>
     <script src="js/helpers/filters.js"></script>
+    <script src="js/helpers/image.js"></script>
 
     <!-- Views -->
     <script src="js/views/shell.js"></script>
@@ -88,6 +89,8 @@
     <script src="js/views/remote.js"></script>
     <script src="js/views/mixed.js"></script>
     <script src="js/views/thumbsup.js"></script>
+    <script src="js/views/music.js"></script>
+    <script src="js/views/tags.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
