--- a/src/index.html
+++ b/src/index.html
@@ -58,15 +58,17 @@
     <script src="lib/enabled/jquery.bum-smack-1.2.0.min.js"></script>
     <script src="lib/enabled/jquery.once.min.js"></script>
 
-    <!-- Core -->
+    <!-- Common utils -->
     <script src="js/utils.js"></script>
-    <script src="js/app.js"></script>
 
     <!-- Helpers -->
     <script src="js/helpers/pager.js"></script>
     <script src="js/helpers/settings.js"></script>
     <script src="js/helpers/filters.js"></script>
     <script src="js/helpers/image.js"></script>
+
+   <!-- Core -->
+    <script src="js/app.js"></script>
 
     <!-- Views -->
     <script src="js/views/shell.js"></script>
