--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,9 @@
     <script src="lib/enabled/jquery.bum-smack-1.2.0.min.js"></script>
     <script src="lib/enabled/jquery.once.min.js"></script>
 
-    <!-- Common utils -->
-    <script src="js/utils.js"></script>
+
+  <!-- Core -->
+  <script src="js/app.js"></script>
 
     <!-- Helpers -->
     <script src="js/helpers/pager.js"></script>
@@ -67,8 +68,9 @@
     <script src="js/helpers/filters.js"></script>
     <script src="js/helpers/image.js"></script>
 
-   <!-- Core -->
-    <script src="js/app.js"></script>
+    <!-- Common utils -->
+    <script src="js/utils.js"></script>
+
 
     <!-- Views -->
     <script src="js/views/shell.js"></script>
@@ -103,6 +105,8 @@
     <script src="js/controllers/audioStreaming.js"></script>
     <script src="js/controllers/video.js"></script>
     <script src="js/controllers/notifications.js"></script>
+    <script src="js/controllers/keymap.js"></script>
+
 
     <!-- Models -->
     <script src="js/models/audio.js"></script>
