--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
     <script src="js/helpers/settings.js"></script>
     <script src="js/helpers/filters.js"></script>
     <script src="js/helpers/image.js"></script>
+    <script src="js/helpers/ui.js"></script>
 
     <!-- Common utils -->
     <script src="js/utils.js"></script>
@@ -95,6 +96,7 @@
     <script src="js/views/thumbsup.js"></script>
     <script src="js/views/music.js"></script>
     <script src="js/views/tags.js"></script>
+    <script src="js/views/pvr.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/xbmc.js"></script>
@@ -106,18 +108,21 @@
     <script src="js/controllers/video.js"></script>
     <script src="js/controllers/notifications.js"></script>
     <script src="js/controllers/keymap.js"></script>
+    <script src="js/controllers/pvr.js"></script>
 
 
     <!-- Models -->
     <script src="js/models/audio.js"></script>
     <script src="js/models/file.js"></script>
     <script src="js/models/video.js"></script>
+    <script src="js/models/pvr.js"></script>
 
     <!-- Collections -->
     <script src="js/collections/xbmc.js"></script>
     <script src="js/collections/audio.js"></script>
     <script src="js/collections/files.js"></script>
     <script src="js/collections/video.js"></script>
+    <script src="js/collections/pvr.js"></script>
 
   <!-- Addons -->
   <script src="js/addons/plugin.audio.soundcloud.js"></script>
