refactord xbmc fields into a helper

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
     <script src="js/helpers/filters.js"></script>
     <script src="js/helpers/image.js"></script>
     <script src="js/helpers/ui.js"></script>
+    <script src="js/helpers/fields.js"></script>
 
     <!-- Common utils -->
     <script src="js/utils.js"></script>
