--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,7 @@
 
   <!-- Addons -->
   <script src="js/addons/plugin.audio.soundcloud.js"></script>
+  <script src="js/addons/plugin.audio.radio.js"></script>
 
 
 
