refactored nowplaying method

--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,7 @@
     <script src="js/controllers/notifications.js"></script>
     <script src="js/controllers/keymap.js"></script>
     <script src="js/controllers/pvr.js"></script>
+    <script src="js/controllers/playerState.js"></script>
 
 
     <!-- Models -->
