--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
     <!-- FavIco -->
     <link rel="shortcut icon" href="dist/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="icon.png">
 
     <!-- Loading Bootstrap -->
     <link href="dist/lib/flatui/bootstrap/css/bootstrap.css" rel="stylesheet">
