added andriod icon

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <!-- FavIco -->
+    <!-- Icons -->
     <link rel="shortcut icon" href="dist/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="apple-touch-icon" href="dist/icon.png">
+    <link rel="icon" href="dist/icon.png">
 
     <!-- Loading Bootstrap -->
     <link href="dist/lib/flatui/bootstrap/css/bootstrap.css" rel="stylesheet">
