--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    
     <!-- Icons -->
     <link rel="shortcut icon" href="dist/favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="dist/icon.png">
